src/css/page.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

* {
    box-sizing: border-box;
    font-family: 'Noto Sans', sans-serif;
    user-select: none;
}

body {
    margin: 0;
    padding: 0;
    background-color: #000d1a;
}

.hidden_control {
    opacity: 0;
    transition: opacity 1s ease;
    background-color: var(--dimmer-control);
}

.topbar_wrapper {
    align-items: center;
    width: 100%;
    display: flex;
    justify-content: center;
}

.topbar {
    position: relative;
    width: 100%;
    height: var(--topbar-height);
    background-color: var(--topbar-background-color);
    backdrop-filter: blur(var(--main-blur));
    border: solid #242426;
    border-width: 0 0 1px 0;
    z-index: 100;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

@media (min-width: 1601px) {
    .topbar {
        width: 1600px;
        align-items: center;
        border-radius: 10px;
        top: 10px;
        border-width: 0;
    }
}

.links_profile_title {
    color: var(--font-color);
    font-size: 25px;
    font-weight: 800;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 20px;
}

.topbar_controls {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
    width: 100%;
    gap: 15px;
}

.topbar_links {
    display: flex;
    gap: 0px;
    align-items: center;
}

.topbar_link {
    display: inline-flex;
    align-items: center;
    text-decoration: none;
    border-radius: 5px;
    margin-right: 10px;
    padding: 5px;
    fill: var(--font-color);
    /* background-color: var(--topbar-button-color); */
    border-radius: 50%;
}

.topbar_link:hover {
    background-color: var(--topbar-button-color-hovered);
}

#background-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    z-index: -2;
    pointer-events: none;
    /* background: linear-gradient(0deg,
            var(--first-gradient-color) 0%,
            var(--second-gradient-color) 100%); */
    background-color: #000;
}

#gradient-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: linear-gradient(0deg, #0D0D0D90, transparent);
    z-index: -1;
    pointer-events: none;
}

.page_wrapper {
    width: 100%;
    height: calc(100vh - var(--topbar-height));
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile_container {
    background: linear-gradient(180deg,
            #4c1982 10%,
            #89146c 90%);
    border-radius: 15px;
    box-shadow: 0 3px 10px #0008;
    padding: 5px;
    width: 750px;
    text-align: center;
}

.dev_hidden {
    display: none;
}

.background_wrapper {
    background-color: var(--wrapper-color);
    border-radius: 13px;
    padding: 15px;
}

.profile_title {
    font-size: 32px;
    font-weight: bold;
    color: var(--font-color);
    margin-bottom: 20px;
}

.mini_title {
    font-size: 20px;
    font-weight: bold;
    color: var(--font-color);
    width: 100%;
    text-align: center;
}

.mini_profile_content_title {
    font-size: 26px;
    font-weight: bold;
    color: var(--font-color);
    width: 100%;
    text-align: center;
}

.dev_change {
    display: flex;
    flex-direction: row;
    gap: 15px;
}

.developers {
    font-size: 14px;
    color: #888;
    display: flex;
    flex-direction: column;
    row-gap: 15px;
}

.member {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    border-radius: 10px;
    width: 100%;
}

.member:hover {
    background-color: #fff1;
    cursor: pointer;
}

.nameplated {
    position: absolute;
    height: 100%;
    width: 100%;
    background: linear-gradient(90deg, transparent 0%, rgba(115, 11, 200, 0.08) 20%, rgba(115, 11, 200, 0.08) 50%, rgba(115, 11, 200, 0.2) 100%);
    border-radius: 10px;
    pointer-events: none;
}

.nameplate {
    position: absolute;
    right: 0;
    height: 100%;
    object-fit: contain;
    border-radius: 10px;
}

.upm_wrapper {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 11;
    cursor: default;
}

.upm {
    display: flex;
    flex-direction: column;
    background-color: var(--upm-background-color);
    color: var(--font-color);
    text-align: center;
    border-radius: 12px;
    padding: 6px;
    position: absolute;
    left: 50%;
    top: 100%;
    transform: translateX(-50%) translateY(8px);
    transition: opacity 0.3s, transform 0.3s;
    white-space: normal;
    z-index: 12;
    gap: 8px;
    cursor: default;
}

.upm.visible {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}

.upm_title {
    font-size: 16px;
    font-weight: 600;
}

.role_coontainer {
    display: flex;
    flex-direction: row;
    gap: 5px;
}

.role {
    display: flex;
    background-color: var(--role-background-color);
    border-radius: 5px;
    gap: 5px;
    padding: 0 5px 0 5px;
    width: 100%;
}

.role_color {
    width: 13px;
    height: 13px;
    border-radius: 50%;
    display: block;
    margin-top: auto;
    margin-bottom: auto;
}

.fav_users_upm {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.fav_user_container {
    display: flex;
    flex-direction: column;
    background-color: var(--role-background-color);
    padding: 5px;
    border-radius: 10px;
    gap: 2px;
    height: 150px;
    overflow-y: auto;
}

.fav_user_container.active {
    height: 100%;
}

.fav_user {
    display: flex;
    flex-direction: row;
    padding: 5px;
    border-radius: 7px;
    gap: 8px;
}

.fav_user:hover {
    background-color: var(--upm-button-color-hovered);
    cursor: pointer;
}

.fav_user_avatar {
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

.fav_user,
.fav_user .fav_user_nickname {
    text-decoration: none !important;
    color: var(--font-color);
}

.fav_user_nickname {
    flex-grow: 1;
}

.badge {
    width: 15px;
    height: 15px;
    background-size: cover;
    background-repeat: no-repeat;
    margin: auto 0;
    margin-right: 3px;
}

.badge.discord {
    background-image: url('https://i.postimg.cc/2yb6DBg4/discord.png');
}

.badge.telegram {
    background-image: url('https://i.postimg.cc/d3b0tVKg/telegram.png');
}

.expand_button {
    height: 30px;
    border-style: solid;
    border-radius: 10px;
    border-width: 0;
    background-color: var(--role-background-color);
    justify-content: center;
    text-align: center;
    cursor: pointer;
}

.fav_user_container.active {
    max-height: 100vh;
}

.fav_user_container.active+.expand_button .arrow {
    transform: rotate(180deg);
}

.expand_button:hover {
    background-color: var(--expand-button-hover);
}

.arrow path {
    fill: var(--font-color);
}

.arrow.rotated {
    transform: rotate(180deg);
}

.member_details {
    display: flex;
    flex-direction: column;
    text-align: left;
}

.member_details * {
    margin: -5px 0 -5px 0;
}

.avatar {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    margin-right: 10px;
    padding: 5px;
}

.avatar_frame {
    position: absolute;
    top: 1px;
    left: 0.3px;
    width: 49px;
    pointer-events: none;
}

.nickname {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 150px;
    display: block;
    font-weight: bold;
    font-size: 15px;
    color: var(--font-color);
}

.nickname>a {
    color: #3D304F;
    text-decoration: none;
}

.status {
    font-size: 12px;
    color: var(--dev-description-text-color);
    margin-top: 5px;
}

.emoji_status img {
    vertical-align: middle;
}

.simple_block {
    padding: 15px;
    background-color: var(--simple-block-background-color);
    border-radius: 10px;
}

.discord_profile_decoration {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    pointer-events: none;
}

.profile_content {
    text-align: left;
    font-size: 16px;
    color: var(--font-color);
    font-size: 14px;
    line-height: 2.2;
    height: 398px;
    width: 100%;
    overflow-y: auto;
    position: relative;
}

.profile_content button {
    display: block;
    width: 100%;
    border: none;
    color: #fff;
    font-weight: 800;
    padding: 10px;
    cursor: pointer;
    margin-top: 10px;
}

.profile_content button:hover {
    filter: brightness(1.1);
}

.description p {
    margin-block-start: 0;
    margin-block-end: 0;
}

.description ul {
    list-style-type: disc;
    padding-left: 20px;
}

.description img {
    max-width: 100%;
    height: auto;
    display: block;
}

/* Scroll */
.profile_content::-webkit-scrollbar,
.fav_user_container::-webkit-scrollbar {
    width: 5px;
}

.profile_content::-webkit-scrollbar-thumb,
.fav_user_container::-webkit-scrollbar-thumb {
    background-color: var(--scroll-background-color);
    border-radius: 5px;

}

.profile_content::-webkit-scrollbar-thumb:hover,
.fav_user_container::-webkit-scrollbar-thumb:hover {
    background-color: var(--scroll-background-color-hovered);
}

.profile_content::-webkit-scrollbar-track,
.fav_user_container::-webkit-scrollbar-track {
    border-radius: 0 8px 8px 0;
}

iframe {
    border-radius: 10px;
}

.track_card {
    width: 220px;
    height: 290px;
    border: 0 solid;
    background-color: var(--simple-block-background-color);
    padding: 10px;
    box-sizing: border-box;
    font-family: sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.track_info {
    display: block !important;
}

.track_cover {
    height: 150px;
    object-fit: contain;
    border-radius: 8px;
    /* box-shadow: 0 3px 10px #16181E50; */
    pointer-events: none;
}

.track_title {
    margin: 10px 0 5px;
    font-size: 16px;
    text-align: center;
    color: var(--font-color);
    overflow: hidden;
    white-space: nowrap;
    position: relative;
    width: 100%;
}

.track_artist {
    margin: 0 0 10px;
    font-size: 14px;
    color: var(--favorite-track-text-artist-color);
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

audio::-webkit-media-controls-current-time-display,
audio::-webkit-media-controls-time-remaining-display {
    display: none;
}

audio {
    width: 100%;
    max-width: 220px;
    border-radius: 12px;
    /* box-shadow: 0 3px 10px var(--favorite-track-shadow-color); */
    padding: 6px;
}

audio {
    filter: invert(var(--favorite-track-chromium-invert-filter));
    background: var(--favorite-track-chromium-background);
}

.gecko audio {
    filter: invert(var(--favorite-track-gecko-invert-filter));
    background: var(--favorite-track-gecko-background);
}

/* Замена баннера */
[src^="https://github.com/Diramix/Diramix/blob/main/assets/banner.png?raw=true"] {
    content: url("../assets/profile/banner.webp");
    border-radius: 5px;
    pointer-events: none;
}

.user_actions_buttons_container {
    position: fixed;
    left: 10px;
    bottom: 10px;
    z-index: 12;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

/* Action Buttons */
.user_actions_buttons_container>button {
    font-size: 24px;
    cursor: pointer;
    color: black;
    background: none;
    border: none;
    backdrop-filter: blur(var(--main-blur));
    background-color: var(--topbar-background-color);
    padding: 3px;
    border-radius: 10px;
}

